--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=alura-openai-chatbot-java
 app.openai.api.key=${OPENAI_API_KEY}
+app.openai.assistant.id=${OPENAI_ASSISTANT_ID}
